examples/test/testpolicy3897.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3897
  namespace: namespace375
spec:
  podSelector:
    matchLabels:
      key28: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value35
      podSelector:
        matchLabels:
          key1: value16
          key3: value18
          key46: value30
